AWS EKS Kubernetes Cluster/istiosvc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      chapter: istio
      topic: traffic-management
      app: app
      version: v2
  template:
    metadata:
      name: app-pod
      labels:
        chapter: istio
        topic: traffic-management
        app: app
        version: v2
    spec:
      containers:
      - name: app-container
        image: deepcloud2208/app:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  labels:
    app: app
    chapter: istio
    topic: traffic-management
    version: v2
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: app
    chapter: istio
    topic: traffic-management
    version: v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      chapter: istio
      topic: traffic-management
      app: app2
      version: v2
  template:
    metadata:
      name: app2-pod
      labels:
        chapter: istio
        topic: traffic-management
        app: app2
        version: v2
    spec:
      containers:
      - name: app2-container
        image: deepcloud2208/app:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  labels:
    app: app2
    chapter: istio
    topic: traffic-management
    version: v2
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 80
  selector:
    app: app2
    chapter: istio
    topic: traffic-management
    version: v2
