AWS EKS Kubernetes Cluster/kiali-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kiali-ingress-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      number: 31400
      name: http-kiali
      protocol: HTTP
    hosts:
    - "*"
