AWS EKS Kubernetes Cluster/prometheus-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 15443
      name: http-prom
      protocol: HTTP
    hosts:
    - "*"
